--- a/css/main.css
+++ b/css/main.css
@@ -1239,7 +1239,7 @@ pre .javascript .function {
 }
 .links-of-author a::before,
 .links-of-author span.exturl::before {
-  background: #c1a1ff;
+  background: #463455;
   border-radius: 50%;
   content: ' ';
   display: inline-block;
