hexo auto upload

--- a/css/main.css
+++ b/css/main.css
@@ -1239,7 +1239,7 @@ pre .javascript .function {
 }
 .links-of-author a::before,
 .links-of-author span.exturl::before {
-  background: #463455;
+  background: #ffff6b;
   border-radius: 50%;
   content: ' ';
   display: inline-block;
@@ -2750,4 +2750,11 @@ ul.breadcrumb li + li:last-child {
   .pagination {
     margin: 8px 0 0;
   }
+}
+body {
+  background: url("https://raw.githubusercontent.com/newreport/img/main/bgm.jpg");
+  background-repeat: no-repeat;
+  background-attachment: fixed;
+  background-position: 50% 50%;
+  background-size: cover;
 }
