--- a/css/main.css
+++ b/css/main.css
@@ -1239,7 +1239,7 @@ pre .javascript .function {
 }
 .links-of-author a::before,
 .links-of-author span.exturl::before {
-  background: #e426f6;
+  background: #e7ffe0;
   border-radius: 50%;
   content: ' ';
   display: inline-block;
