--- a/themes/next/source/css/main.styl
+++ b/themes/next/source/css/main.styl
@@ -47,8 +47,9 @@ for $inject_style in hexo-config('injects.style')
   @import $inject_style;
 
 
+//https://img.flowerdream.top/haruki/blog/haruki-bgm.jpg)
 body { 
-background: url(https://img.flowerdream.top/haruki/blog/haruki-bgm.jpg);
+background: url(https://gd-obj-001.gd2.qingstor.com/haruki/blog/haruki-bgm.jpg);
 background-repeat: no-repeat;// 设定背景图片非重复填充
 background-attachment: fixed;// 设置背景图片不随页面滚动
 background-position: 50% 50%;// 设置背景图片位置
