--- a/themes/next/layout/_macro/post.njk
+++ b/themes/next/layout/_macro/post.njk
@@ -21,6 +21,7 @@
     <span hidden itemprop="post" itemscope itemtype="http://schema.org/CreativeWork">
       <meta itemprop="name" content="{{ page.title + ' | ' + title }}">
       <meta itemprop="description" content="{{ page.description }}">
+      <meta itemprop="keywords" content="{{ page.keywords }}">
     </span>
 
     {%- if post.header !== false %}
